shared.css
/* ------------------- */
/* Custom properties   */
/* ------------------- */
:root {
    /* Colors */
    --white: hsl(0, 0%, 100%);
    --black: hsl(0, 0%, 0%);
    --background-color: #F3F4F7;
    --text-color: #959FA8;
    --active-text-color: #172C41;
    --active-row-background-color: #8B96A0;
    --active-row-background-color-opacity: 139, 150, 160;
    --navigation-menu-color: #A0A8B1;
    --box-shadow-color: #B0B0B0;
    --separator-color: #D9D9D9;
    --errors-color: #DF5858;
}

/* ------------------- */
/* Reset               */
/* ------------------- */

/* https://piccalil.li/blog/a-modern-css-reset/ */

/* Box sizing */
*,
*::before,
*::after {
    box-sizing: border-box;
}

/* Reset margins */
body,
h1,
h2,
h3,
h4,
h5,
p,
figure,
picture {
    margin: 0;
}

ul {
    list-style: none;
    list-style-image: none;
    padding: 0;
    margin: 0;
}

li {
    padding: 0;
    margin: 0;
}

a {
    text-decoration: none;
    color: inherit;
}

    a:hover, a:focus {
        text-decoration: underline;
    }

/* ------------------- */
/* General             */
/* ------------------- */
html {
    font-size: 1.12vw; /* 16px for 1440px-viewport */
}

body {
    font-family: 'Fraunces', serif;
    font-size: 1rem;
    line-height: 1.625rem;
    font-weight: 400;
    background-color: var(--background-color);
    color: var(--text-color);
}

h1 {
    font-size: 2rem;
}

h2 {
    font-size: 1.8rem;
    font-weight: normal;
    color: var(--active-text-color);
    padding-bottom: 1rem;
    white-space: nowrap;
}

h3 {
    font-size: 1.5rem;
    font-weight: normal;
    color: var(--active-text-color);
}

h4 {
    font-size: 1.2rem;
    font-weight: normal;
    color: var(--active-text-color);
}

.highlight {
    font-size: 1.1rem;
    font-weight: normal;
    color: var(--active-text-color);
}

.flex {
    display: flex;
    gap: var(--gap, 1rem);
    align-items: center;
}

.vertical-flex {
    display: flex;
    flex-direction: column;
    gap: var(--gap, 1rem);
}

.grid {
    display: grid;
    gap: var(--gap, 1rem);
}

.container {
    text-align: left;
    padding: 0 1rem;
    --gap: 0;
    min-height: calc(100vh - 4rem);
}

.card {
    border-top: 1px solid var(--separator-color);
    background-color: var(--white);
    border-radius: 4px;
    box-shadow: 0 3px 2px var(--box-shadow-color);
}

.rotate {
    transform: rotateX(180deg);
    transform-origin: center center;
}

.hide {
    display: none;
}

button {
    border: none;
    outline: none;
    width: fit-content;
    padding: 0;
    font-size: inherit;
    line-height: inherit;
    font-family: inherit;
    background: none;
}

    button:not(:disabled):hover,
    button:not(:disabled):focus {
        cursor: pointer;
    }

hr {
    width: 100%;
    margin: 0;
    border: 0;
    border-bottom: 1px solid var(--separator-color);
}

/* Form */
form {
    font-size: 1.1rem;
    padding: 1rem;
}

    form input {
        padding: 0.5rem;
        margin: 0;
        border: 0;
        border-radius: 0;
        border-bottom: 1px solid var(--separator-color);
        outline: none;
    }

        form textarea::placeholder,
        form input::placeholder {
            color: var(--text-color);
            font-style: italic;
        }

        form textarea:focus,
        form input:focus {
            border-bottom: 2px solid var(--active-text-color);
            color: var(--active-text-color);
        }

    form .row {
        height: 2.5rem;
    }

    form textarea {
        resize: none;
    }

    form .required::after {
        margin-left: 5px;
        content: '*';
        color: var(--errors-color);
        font-weight: bold;
    }

.form-button {
    background-color: var(--active-row-background-color);
    color: var(--white);
    line-height: 3.5rem;
    text-align: center;
    border-radius: 3px;
    font-size: 1.2rem;
}

    .form-button:not(:disabled):not(.disabled):hover, .form-button:not(:disabled):not(.disabled):focus {
        text-decoration: none;
        background-color: rgba(var(--active-row-background-color-opacity), 0.4);
        color: var(--active-text-color);
        outline: none;
    }

    .form-button:disabled,
    .form-button.disabled {
        background-color: rgba(var(--active-row-background-color-opacity), 0.4);
        color: var(--white);
        text-decoration: none;
        cursor: none;
    }

/* Tab */
ul.tab-list {
    margin-bottom: -3px;
    margin-left: -3px;
    position: relative;
    display: flex;
    align-items: center;
}

    ul.tab-list > li {
        padding: 3px 3px 0 3px;
        overflow: hidden;
        display: inline-block;
        vertical-align: bottom;
        margin-right: 0.25rem;
    }

        ul.tab-list > li > span {
            display: block;
            padding: 1rem 1rem calc(1rem + 3px) 1rem;
            background-color: var(--text-color);
            color: var(--white);
            border-radius: 4px 4px 0 0;
            font-weight: bold;
        }

        ul.tab-list > li.active > span {
            background-color: var(--white);
            color: var(--active-text-color);
            box-shadow: 0 -1px 2px var(--box-shadow-color);
            position: relative;
        }

        ul.tab-list > li.active > span::after {
            content:"";
            position: absolute;
            bottom: 0;
            left: 0;
            background-color: var(--white);
            height: 3px;
            width: 100%;
            z-index: 2;
        }

        ul.tab-list > li:hover, ul.tab-list > li:focus {
            cursor: pointer;
        }

    ul.tab-list + .tab-content {
        min-height: 20rem;
        margin-bottom: 2rem;
        border-top: 1px solid var(--separator-color);
        background-color: var(--white);
        border-radius: 0 4px 4px 4px;
        box-shadow: 0 3px 2px var(--box-shadow-color);
        position: relative;
        z-index: 1;
        padding: 1rem;
    }
/* ... */

